<resources>
    <string name="app_name">Call Color Screen</string>
    <string name="skipAds">Skip</string>
    <string name="descrip_splash">Colorful incoming call screen</string>
    <string name="loading">Loading ...</string>
    <string name="start">Start</string>
    <string name="titleSetting">Setting</string>
    <string name="callscreen">Call screen</string>
    <string name="LEDFlash">LED Flash</string>
    <string name="shareApp">Share App</string>
    <string name="rateApp">Rate App</string>
    <string name="policy">Privacy policy</string>
    <string name="overlay_permision">Permission dialog</string>
    <string name="overlay_permision_content">Please allow drawing call screen on other applications</string>
    <string name="ok">Ok</string>
    <string name="titleDrawOver">To show call screen</string>
    <string name="titleNotification">To answer the call in call screen and show phone number</string>
    <string name="prompt_permission_draw_window_msg">Screen Permission</string>
    <string name="prompt_permission_notification_msg">Notification Access</string>
    <string name="turn_on_noti">Allows access to the notification to answer the call in call screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="themesFragmentTitle">Themes</string>
    <string name="customFragmentTitle">Custom</string>
    <string name="turn_on_network">Connection errors! Please turn on the internet connection to update the latest themes</string>
    <string name="err_network">Request failed, please check the network</string>
    <string name="caller">Caller</string>
    <string name="apply_done">Successfully applied</string>
    <string name="applyForAllContact">Apply for all contact</string>
    <string name="applied">Applied</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading ...</string>
    <string name="down_err">Download error. Somethings went wrong!</string>
    <string name="downloadSs">Download success</string>
    <string name="select_contact">Select contact</string>
    <string name="set">Set</string>
    <string name="unknowContact">Unknow</string>
    <string name="set_theme_success">Set theme success</string>
    <string name="addYourVideo">Create your video or image</string>
    <string name="video">Videos</string>
    <string name="images">Images</string>
    <string name="your_video">Open camera or select a new video</string>
    <string name="select_picture">Select a picture</string>
    <string name="file_not_found">File not found !</string>
    <string name="facebook_app_id">1389962418463800</string>
    <string name="contentDelete">Are you sure delete theme?</string>
    <string name="nope">Nope</string>
    <string name="sure">Sure, I want</string>
    <string name="maybe_later">Maybe later</string>
    <string name="rate_your_experience_with">Rate your experience with Call Color Screen</string>
    <string name="the_best_we_can_get_is_5_stars">The best we can get is 5 stars!</string>
    <string name="mail_subject">Feedback to the developer</string>
    <string name="rate_on_gg_play">Rate on Google Play</string>
    <string name="rate_title2">Let us know where we can improve</string>
    <string name="rate_title3">Wonderful!</string>
    <string name="rate_content2">Send us some feedback!</string>
    <string name="rate_content3">Take a second to rate us on Google Play</string>
    <string name="feed_back_rate">Feedback</string>
    <string name="flash_not_support">Your device doesn\'t support flash light</string>
    <string name="notify_msg_foreground">Call Screen is running</string>
    <string name="title_auto_start">Allow AutoStart</string>
    <string name="content_auto_start">Please grant permission to automatically start the application in the background. The main functionality of the app may not work without this permission</string>
    <string name="allow">Allow</string>
    <string name="gdpr_content">Personalise ads using personal data</string>
    <string name="explain_service" translatable="false">The app uses the foreground service to listen for incoming call status, then displays the call color screen, even if the user exits the app. Without using foreground service, the core features of the application cannot work</string>

    <string name="tips">Tips</string>
    <string name="faq1">If you cannot display the incoming call color screen, please follow these instructions:</string>
    <string name="faq2"><![CDATA[Go to <b>Settings</b> -> <b>Applications</b> -> <b>Application management</b> -> <b>Permissions</b> -> <b>Back ground Auto Start</b> -> tap the screen Back ground Auto Start\n and <b>enable</b> the Call color screen application.]]></string>
    <string name="faq3"><![CDATA[On some devices, the permission process may <b>not</b> be the same as above, please <b>search</b> in your application information under <b>"autostart in background"</b> or similar and <b>grant permission</b> to Call color screen. If you have tried everything and it doesn\'t work, please email us at: phamquangtung04041992@gmail.com. We are pleased to answer your questions and serve you. Thank you]]></string>
</resources>