<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.splash.SplashActivity">

        <ImageView
            android:id="@+id/img_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:id="@+id/ll_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="@drawable/bg_llskip"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_7sdp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skipAds"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:layout_width="@dimen/_9sdp"
                android:layout_height="@dimen/_9sdp"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:src="@drawable/icskip" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_skip">

            <TextView
                android:id="@+id/txt_appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_29ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_appname"
                android:gravity="center"
                android:text="@string/descrip_splash"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />
        </RelativeLayout>

        <com.facebook.ads.NativeAdLayout
            android:id="@+id/fb_native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

                <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:max="100"
                    android:progressDrawable="@drawable/bg_seekbar"
                    android:thumb="@null" />
            </LinearLayout>

            <TextView
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_start"
                android:paddingLeft="@dimen/_50sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_50sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/start"
                android:textColor="@color/color_app"
                android:textSize="@dimen/_14sdp"
                android:visibility="invisible" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>