<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingTop="@dimen/_16sdp"
            android:background="@drawable/bg_bottom_sheet_rate"
            >
            <me.grantland.widget.AutofitTextView
                android:id="@+id/tvContentRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:maxLines="1"
                autofit:minTextSize="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/rate_your_experience_with"
                android:textColor="#1D1D27"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvGuideRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text="@string/the_best_we_can_get_is_5_stars"
                android:textColor="#8D99B7"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContentRate" />
            <com.call.colorscreen.ledflash.view.AnimationRatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconAnimationMode="zoomDownUp"
                app:iconSize="@dimen/_32sdp"
                app:iconSpacingEnd="@dimen/_10sdp"
                app:iconSpacingStart="@dimen/_10sdp"
                app:iconSpacingTop="@dimen/_10sdp"
                app:iconSpacingBottom="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/tvGuideRate"
                app:numStars="5" />
            <TextView
                android:id="@+id/tvRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@null"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/maybe_later"
                android:textColor="#003DF6"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/ic_rate"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="-30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/image_rate_happy"
            app:layout_constraintTop_toTopOf="parent"
            />
        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>