<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.call.colorscreen.ledflash.ui.setting.SettingActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingActivity">

        <RelativeLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/color_app"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/btnBack"
                android:text="@string/titleSetting"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/layoutContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/llAds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_9sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_9sdp">
                <RelativeLayout
                    android:id="@+id/llOnOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imvIcon"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/icon_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/swOnOff"
                        android:layout_toEndOf="@+id/imvIcon"
                        android:paddingStart="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_9sdp"
                        android:text="@string/callscreen"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swOnOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBDDDADA"
                    android:visibility="visible"/>

                <RelativeLayout
                    android:id="@+id/llFlash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imgFlash"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_flash" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/swflash"
                        android:layout_toEndOf="@+id/imgFlash"
                        android:paddingStart="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_9sdp"
                        android:text="@string/LEDFlash"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swflash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBDDDADA" />

                <RelativeLayout
                    android:id="@+id/llShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btnShare"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_share" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/btnShare"
                        android:paddingStart="@dimen/_4sdp"
                        android:text="@string/shareApp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_arrow" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBDDDADA" />

                <RelativeLayout
                    android:id="@+id/llRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btnRate"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_rate" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/btnRate"
                        android:paddingStart="@dimen/_4sdp"
                        android:text="@string/rateApp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_arrow" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBDDDADA" />

                <RelativeLayout
                    android:id="@+id/llPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btnPolicy"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_policy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/btnPolicy"
                        android:paddingStart="@dimen/_4sdp"
                        android:text="@string/policy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_arrow" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EBDDDADA" />
                <RelativeLayout
                    android:id="@+id/llTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/btntip"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/quest" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/btntip"
                        android:paddingStart="@dimen/_4sdp"
                        android:text="@string/tips"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/_12sdp"
                        app:srcCompat="@drawable/ic_arrow" />
                </RelativeLayout>
                <View
                    android:id="@+id/lineTips"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="#EBDDDADA" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <FrameLayout
                        android:id="@+id/llAdsGG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.facebook.ads.NativeAdLayout
                        android:id="@+id/llAdsFb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/llAds"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bd_ads"
            android:padding="1dp"
            android:gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
